--- a/result.html
+++ b/result.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Achievers | Sri Spardha Academy</title>
-  <link rel="stylesheet" href="result.css">
+  <link rel="stylesheet" href="statics/result.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
