--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sri Spardha Academy</title>
     <meta name="description" content="Sri Spardha Academy offers expert coaching for Government Exams in Bengaluru. Enroll now for limited seats.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="statics/style.css">
+    <link rel="stylesheet" href="statics/css/index.css">
 </head>
 <body>
 
@@ -87,12 +87,12 @@
             <li><a href="#about" title="About Sri Spardha Academy">About</a></li>
             <li><a href="#result" title="Our Successful Students">Achievements</a></li>
             <li><a href="#reviews" title="Review of Sri Spardha Academy">Reviews</a></li>
-            <li><a href="#contact" title="Contact Sri Spardha Academy">Contact</a></li>
+            <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
         </ul>
     </nav>
 
     <div class="actions">
-        <a href="/" class="app-btn" title="Download Sri Spardha Academy Learning App">App Download</a>
+        <a href="https://play.google.com/store/search?q=sri+spardha+academy+app&c=apps&hl=en_IN" class="app-btn" title="Download Sri Spardha Academy Learning App">App Download</a>
         <a href="/" class="enroll-btn" title="Enroll Now at Sri Spardha Academy">Enroll Now</a>
         <a href="https://wa.me/91XXXXXXXXXX" target="_blank" class="whatsapp" title="Chat with Sri Spardha Academy on WhatsApp">
             <i class="fab fa-whatsapp"></i>
@@ -121,14 +121,14 @@
             <div class="slide-text">
                 <h1>Boost Your Career  Competitive Exams</h1>
                 <p>Learn from top faculty with proven results</p>
-                <a href="#" class="btn">Download App</a>
+                <a href="https://play.google.com/store/search?q=sri+spardha+academy+app&c=apps&hl=en_IN" class="btn">Download App</a>
             </div>
         </div>
         <div class="slide" style="background-image:url('images/img3.jpeg');">
             <div class="slide-text">
                 <h1>Limited Seats Available – Enroll Today!</h1>
                 <p>Comprehensive study material & guidance for all exams</p>
-                <a href="#" class="btn">Get Started</a>
+                <a href="contact.html" class="btn">Get Started</a>
             </div>
         </div>
     </div>
@@ -290,6 +290,10 @@
     </div>
 </section>
 
+<a href="#" id="whatsappChat" class="whatsapp-chat">
+  <i class="fab fa-whatsapp"></i>
+  <span>Live Chat</span>
+</a>
 
 <!-- Footer Section -->
 <footer class="footer-modern">
@@ -306,9 +310,9 @@
             </div>
             <a href="#" class="footer-cta">Enroll Now</a>
             <div class="footer-social">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/groups/363117101235938/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/sri_spardha_academy/?hl=en"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@srispardhaacademy6932"><i class="fab fa-youtube"></i></a>
                 <a href="https://wa.me/91XXXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
@@ -317,12 +321,12 @@
         <div class="footer-links">
             <h4>Quick Links</h4>
             <ul>
-                <li><a href="/" title="Sri Spardha Academy Home">Home</a></li>
-                <li><a href="/" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
-                <li><a href="/" title="About Sri Spardha Academy">About</a></li>
-                <li><a href="/" title="Our Successful Students">Our Students</a></li>
+                <li><a href="index.html" title="Sri Spardha Academy Home">Home</a></li>
+                <li><a href="#course" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
+                <li><a href="" title="About Sri Spardha Academy">About</a></li>
+                <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
                 <li><a href="/" title="Review of Sri Spardha Academy">Reviews</a></li>
-                <li><a href="/" title="Contact Sri Spardha Academy">Contact</a></li>
+                <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
             </ul>
         </div>
 
@@ -331,7 +335,7 @@
             <h4>Our Courses</h4>
             <h3>Government Exams</h3>
             <ul class="sub-courses">
-                <li><a href="/courses/ssc">SSC</a></li>
+                <li><a href="kas.html">KAS</a></li>
                 <li><a href="/courses/banking">Banking</a></li>
                 <li><a href="/courses/railway">Railway</a></li>
                 <li><a href="/courses/upsc">UPSC</a></li>
@@ -362,6 +366,6 @@
     </div>
 </footer>
 
-<script src="statics/script.js"></script>
+<script src="statics/script/index.js"></script>
 </body>
 </html>
