--- a/kas.html
+++ b/kas.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Complete Karnataka Administrative Service (KAS) syllabus, exam pattern, services, and coaching details at Sri Spardha Academy Bangalore.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="statics/kas.css">
+    <link rel="stylesheet" href="statics/css/kas.css">
 </head>
 <body>
 <a href="index.html" class="back-home"><i class="fa fa-arrow-left"></i> Back to Home</a>
@@ -278,6 +278,11 @@ Don't settle for anything less than the best when it comes to preparing for the 
 
 </section>
 
+<a href="#" id="whatsappChat" class="whatsapp-chat">
+  <i class="fab fa-whatsapp"></i>
+  <span>Live Chat</span>
+</a>
+
 <!-- Footer Section -->
 <footer class="footer-modern">
     <div class="footer-wave"></div>
@@ -293,9 +298,9 @@ Don't settle for anything less than the best when it comes to preparing for the 
             </div>
             <a href="#" class="footer-cta">Enroll Now</a>
             <div class="footer-social">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com/groups/363117101235938/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/sri_spardha_academy/?hl=en"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@srispardhaacademy6932"><i class="fab fa-youtube"></i></a>
                 <a href="https://wa.me/91XXXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
         </div>
@@ -304,12 +309,12 @@ Don't settle for anything less than the best when it comes to preparing for the 
         <div class="footer-links">
             <h4>Quick Links</h4>
             <ul>
-                <li><a href="/" title="Sri Spardha Academy Home">Home</a></li>
+                <li><a href="index.html" title="Sri Spardha Academy Home">Home</a></li>
                 <li><a href="/" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
                 <li><a href="/" title="About Sri Spardha Academy">About</a></li>
-                <li><a href="/" title="Our Successful Students">Our Students</a></li>
+                <li><a href="result.html" title="Our Successful Students">Achievements</a></li>
                 <li><a href="/" title="Review of Sri Spardha Academy">Reviews</a></li>
-                <li><a href="/" title="Contact Sri Spardha Academy">Contact</a></li>
+                <li><a href="contact.html" title="Contact Sri Spardha Academy">Contact</a></li>
             </ul>
         </div>
 
@@ -318,7 +323,7 @@ Don't settle for anything less than the best when it comes to preparing for the 
             <h4>Our Courses</h4>
             <h3>Government Exams</h3>
             <ul class="sub-courses">
-                <li><a href="/courses/ssc">SSC</a></li>
+                <li><a href="kas.html">KAS</a></li>
                 <li><a href="/courses/banking">Banking</a></li>
                 <li><a href="/courses/railway">Railway</a></li>
                 <li><a href="/courses/upsc">UPSC</a></li>
@@ -351,6 +356,6 @@ Don't settle for anything less than the best when it comes to preparing for the 
 
 
 
-<script src="/statics/kas-script.js"></script>
+<script src="statics/script/kas.js"></script>
 </body>
 </html>  
