--- a/result.html
+++ b/result.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Achievers | Sri Spardha Academy</title>
-  <link rel="stylesheet" href="statics/result.css">
+  <link rel="stylesheet" href="statics/css/result.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -113,5 +113,79 @@
   </div>
 </section>
 
+<a href="#" id="whatsappChat" class="whatsapp-chat">
+  <i class="fab fa-whatsapp"></i>
+  <span>Live Chat</span>
+</a>
+<!-- Footer Section -->
+<footer class="footer-modern">
+    <div class="footer-wave"></div>
+    <div class="footer-wrap">
+        <!-- Brand & Info -->
+        <div class="footer-brand">
+            <h2>Sri Spardha Academy</h2>
+            <p>Shaping successful careers through expert coaching in Government exams.</p>
+            <div class="footer-badges">
+                <span>✔ Trusted Faculty</span>
+                <span>✔ Result Oriented</span>
+                <span>✔ Career Focused</span>
+            </div>
+            <a href="#" class="footer-cta">Enroll Now</a>
+            <div class="footer-social">
+                <a href="https://www.facebook.com/groups/363117101235938/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/sri_spardha_academy/?hl=en"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@srispardhaacademy6932"><i class="fab fa-youtube"></i></a>
+                <a href="https://wa.me/91XXXXXXXXXX" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            </div>
+        </div>
+
+        <!-- Quick Links -->
+        <div class="footer-links">
+            <h4>Quick Links</h4>
+            <ul>
+                <li><a href="/" title="Sri Spardha Academy Home">Home</a></li>
+                <li><a href="/" title="Courses Offered by Sri Spardha Academy">Courses</a></li>
+                <li><a href="/" title="About Sri Spardha Academy">About</a></li>
+                <li><a href="/" title="Our Successful Students">Our Students</a></li>
+                <li><a href="/" title="Review of Sri Spardha Academy">Reviews</a></li>
+                <li><a href="/" title="Contact Sri Spardha Academy">Contact</a></li>
+            </ul>
+        </div>
+
+        <!-- Courses Section -->
+        <div class="footer-links">
+            <h4>Our Courses</h4>
+            <h3>Government Exams</h3>
+            <ul class="sub-courses">
+                <li><a href="/courses/ssc">SSC</a></li>
+                <li><a href="/courses/banking">Banking</a></li>
+                <li><a href="/courses/railway">Railway</a></li>
+                <li><a href="/courses/upsc">UPSC</a></li>
+                <li><a href="/courses/kpsc">KPSC</a></li>
+            </ul>
+        </div>
+
+        <!-- Contact Section -->
+        <div class="footer-contact">
+            <h4>Get in Touch</h4>
+            <p><i class="fa fa-location-dot"></i> 587, 3rd Floor, 100ft road, Balaji Layout, Dwaraka Nagar, Vajarahalli, Kanakapura Main Rd, Talaghattapura, Bengaluru, Karnataka 560062</p>
+            <p><i class="fa fa-phone"></i> +91 9901731785 / 9901731758</p>
+            <p><i class="fa fa-envelope"></i> info@srispardhaacademy.in</p>
+
+            <div class="footer-map">
+                <h4>Our Location</h4>
+                <iframe
+                    src="https://www.google.com/maps?q=Vajarahalli,Bengaluru&output=embed"
+                    width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-copy">
+        © 2026 Sri Spardha Academy. All Rights Reserved.
+    </div>
+</footer>
 </body>
 </html>
